--- a/app/Resources/views/site/show.html.twig
+++ b/app/Resources/views/site/show.html.twig
@@ -6,8 +6,8 @@
     <table>
         <tbody>
             <tr>
-                <th>Id</th>
-                <td>{{ site.id }}</td>
+                <th>Arrival</th>
+                <td>{{ site.arrival }}</td>
             </tr>
             <tr>
                 <th>Name</th>
@@ -35,6 +35,14 @@
     <ul>
         <li>
             <a href="{{ path('site_index') }}">Back to the list</a>
+        </li>
+        <li>
+            <a href="{{ path('site_edit', { 'arrival': site.arrival }) }}">Edit</a>
+        </li>
+        <li>
+            {{ form_start(delete_form) }}
+                <input type="submit" value="Delete">
+            {{ form_end(delete_form) }}
         </li>
     </ul>
 {% endblock %}
