--- a/app/Resources/views/site/index.html.twig
+++ b/app/Resources/views/site/index.html.twig
@@ -6,11 +6,11 @@
     <table>
         <thead>
             <tr>
-                <th>Arrival</th>
+                <th>Id</th>
                 <th>Name</th>
                 <th>Icao</th>
                 <th>Latitude</th>
-                <th>Longitute</th>
+                <th>Longitude</th>
                 <th>City</th>
                 <th>Actions</th>
             </tr>
@@ -18,19 +18,19 @@
         <tbody>
         {% for site in sites %}
             <tr>
-                <td><a href="{{ path('site_show', { 'arrival': site.arrival }) }}">{{ site.arrival }}</a></td>
+                <td><a href="{{ path('site_show', { 'id': site.id }) }}">{{ site.id }}</a></td>
                 <td>{{ site.name }}</td>
                 <td>{{ site.icao }}</td>
                 <td>{{ site.latitude }}</td>
-                <td>{{ site.longitute }}</td>
+                <td>{{ site.longitude }}</td>
                 <td>{{ site.city }}</td>
                 <td>
                     <ul>
                         <li>
-                            <a href="{{ path('site_show', { 'arrival': site.arrival }) }}">show</a>
+                            <a href="{{ path('site_show', { 'id': site.id }) }}">show</a>
                         </li>
                         <li>
-                            <a href="{{ path('site_edit', { 'arrival': site.arrival }) }}">edit</a>
+                            <a href="{{ path('site_edit', { 'id': site.id }) }}">edit</a>
                         </li>
                     </ul>
                 </td>
