--- a/app/Resources/views/site/show.html.twig
+++ b/app/Resources/views/site/show.html.twig
@@ -6,8 +6,8 @@
     <table>
         <tbody>
             <tr>
-                <th>Arrival</th>
-                <td>{{ site.arrival }}</td>
+                <th>Id</th>
+                <td>{{ site.id }}</td>
             </tr>
             <tr>
                 <th>Name</th>
@@ -22,8 +22,8 @@
                 <td>{{ site.latitude }}</td>
             </tr>
             <tr>
-                <th>Longitute</th>
-                <td>{{ site.longitute }}</td>
+                <th>Longitude</th>
+                <td>{{ site.longitude }}</td>
             </tr>
             <tr>
                 <th>City</th>
@@ -37,7 +37,7 @@
             <a href="{{ path('site_index') }}">Back to the list</a>
         </li>
         <li>
-            <a href="{{ path('site_edit', { 'arrival': site.arrival }) }}">Edit</a>
+            <a href="{{ path('site_edit', { 'id': site.id }) }}">Edit</a>
         </li>
         <li>
             {{ form_start(delete_form) }}
