--- a/app/Resources/views/flight/show.html.twig
+++ b/app/Resources/views/flight/show.html.twig
@@ -26,8 +26,8 @@
                 <td>{% if flight.publicationDate %}{{ flight.publicationDate|date('Y-m-d H:i:s') }}{% endif %}</td>
             </tr>
             <tr>
-                <th>Descrition</th>
-                <td>{{ flight.descrition }}</td>
+                <th>Description</th>
+                <td>{{ flight.description }}</td>
             </tr>
             <tr>
                 <th>Wasdone</th>
